--- a/index.html
+++ b/index.html
@@ -155,13 +155,21 @@
 
         <div class="card">
           <div class="card-block">
+            <h2>Research</h2>
+            <div class="research-experience">
+              <small class="date">Undergraduate Capstone Research - <a href="https://github.com/Jordan-Madden/AINSB" title="#"> Github</a></small>
+              <h3 class="h5 date-title">Visual Navigation System for the Blind </h3>
+              <p>
+                Developed a device that uses machine learning and computer vision to enable safe navigation for the blind/visually impaired.
+              </p>
+            </div>
+          </div>
+      </div>
+
+        <div class="card">
+          <div class="card-block">
             <h2>Projects</h2>
             <div class="row">
-              <div class="col-md-4">
-                <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Visual Navigation System for the Blind</h3>
-                <p><a href="https://github.com/Jordan-Madden/AINSB">Github</a></p>
-              </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-05.jpg" class="img-responsive" alt="">
                 <h3 class="h5">InstaMessage</h3>
