--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
               <small class="date">Undergraduate Capstone Research - <a href="https://github.com/Jordan-Madden/AINSB" title="#"> Github</a></small>
               <h3 class="h5 date-title">Visual Navigation System for the Blind </h3>
               <p>
-                Developed a device that uses machine learning and computer vision to enable safe navigation for the blind/visually impaired.
+                Worked under the supervision of Dr. Lindon Falconer and Dr. Kolapo Alli to develop a device that uses machine learning and computer vision
+                to enable safe navigation for the blind/visually impaired.
               </p>
             </div>
           </div>
