--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
                 <p>
                     I have recently completed my bachelors degree in Electronics Engineering where I specialized in Instrumentation and Automation. 
-                    I am very passionate about robotics, artificial intelligence and IoT. I love learning and I desire to develop systems that can bridge the gap between 
+                    I am very passionate about artificial intelligence, robotics and IoT. I love learning and I desire to develop systems that can bridge the gap between 
                     the capabilities of hardware and software. I am particularly interested in the application of these systems to areas such as automation, healthcare 
                     and the assistance of the disabled.
                 </p>
@@ -111,7 +111,7 @@
                   I work towards the deployment, monitoring, maintenance and upgrades of the Microwave Cell Network in Jamaica and the 
                   wider Caribbean. My role consist of monitoring the communication parameters between various cell sites, performing 
                   testing to determine the stability of various links, troubleshooting issues with links or the microwave equipment
-                  and drafting moe technical documentation needed by the customers.
+                  and drafting the technical documentation needed by the customers.
                 </p>
               </div>
 
