--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets/images/img-05.jpg" class="img-responsive" alt="">
-                <h3 class="h5">InstaMessage</h3>
-                <p><a href="https://github.com/Jordan-Madden/ECSE3108-Project">Github</a></p><p><a href="http://insta-msg.herokuapp.com">Website</a></p>
+                <h3 class="h5">InstaMessage</h3> 
+                <a href="http://insta-msg.herokuapp.com">Website -</a> <a href="http://insta-msg.herokuapp.com">Github</a>
+              </div>
+              <div class="col-md-4">
+                <img src="./assets/images/img-06.png" class="img-responsive" alt="">
+                <h3 class="h5">MNIST from Scratch</h3>
+                <p><a href="https://github.com/Jordan-Madden/MNIST-from-scratch">Github</a></p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
