--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
               </div>
               <div class="col-md-8">
                 <p> 
-                    Currently, I am an ICT Engineering Intern on the Microwave Engineering team at Huawei Technologies. Here, we work on deployment, monitoring, 
-                    maintenance and upgrades of the Microwave Cell Network in Jamaica and the wider Caribbean.
+                    Currently, I am an Wireless Engineer working on Microwave and RAN technologies at Huawei Technologies. My team works on deployment, monitoring, 
+                    maintenance and upgrades of the mobile Network in Jamaica and the wider Caribbean.
                 </p>
                 <p>
                     I have recently completed my bachelors degree in Electronics Engineering where I specialized in Instrumentation and Automation. 
                     I am very passionate about artificial intelligence, robotics and IoT. I love learning and I desire to develop systems that can bridge the gap between 
-                    the capabilities of hardware and software. I am particularly interested in the application of these systems to areas such as automation, healthcare 
-                    and the assistance of the disabled.
+                    the capabilities of hardware and software. I am particularly interested in the development of such systems that can operate safely and securely without
+                    any human supervision.
                 </p>
               </div>
             </div>
@@ -105,13 +105,13 @@
               <h2>Work Experience</h2>
               <div class="work-experience">
                 <small class="date">July 2021 - Present</small>
-                <h3 class="h5 date-title">ICT Engineering Intern - <a href="#" title="#">Huawei Technologies</a></h3>
+                <h3 class="h5 date-title">Wireless Engineer - <a href="#" title="#">Huawei Technologies</a></h3>
                   
                 <p>
-                  I work towards the deployment, monitoring, maintenance and upgrades of the Microwave Cell Network in Jamaica and the 
-                  wider Caribbean. My role consist of monitoring the communication parameters between various cell sites, performing 
-                  testing to determine the stability of various links, troubleshooting issues with links or the microwave equipment
-                  and drafting the technical documentation needed by the customers.
+                  I work towards the deployment, monitoring, maintenance and upgrades of the Wireless Network in Jamaica and the 
+                  wider Caribbean. My role consist of monitoring the communication parameters and KPI's within the mobile networks, performing 
+                  testing to determine the stability of various links, performing upgrades to improve network performance, troubleshooting issues 
+                  with links or the communication equipment and drafting the technical documentation needed by the customers.
                 </p>
               </div>
 
@@ -174,13 +174,8 @@
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets/images/img-05.jpg" class="img-responsive" alt="">
-                <h3 class="h5">InstaMessage</h3> 
-                <a href="http://insta-msg.herokuapp.com">Website -</a> <a href="http://insta-msg.herokuapp.com">Github</a>
-              </div>
-              <div class="col-md-4">
-                <img src="./assets/images/img-06.png" class="img-responsive" alt="">
-                <h3 class="h5">MNIST from Scratch</h3>
-                <p><a href="https://github.com/Jordan-Madden/MNIST-from-scratch">Github</a></p>
+                <h3 class="h5">InstaMessage</h3>
+                <p><a href="https://github.com/Jordan-Madden/ECSE3108-Project">Github</a></p><p><a href="http://insta-msg.herokuapp.com">Website</a></p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
